| Bug #46552 | Can't start nodes error 2341 | ||
|---|---|---|---|
| Submitted: | 4 Aug 2009 18:19 | Modified: | 11 Aug 2009 11:17 |
| Reporter: | kadir özdemir | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S1 (Critical) |
| Version: | mysql-cluster-gpl-7.0.6-linux-x86_64-gli | OS: | Linux (centos) |
| Assigned to: | Jonas Oreland | Target Version: | |
| Triage: | Triaged: D1 (Critical) / R6 (Needs Assessment) / E6 (Needs Assessment) | ||
[4 Aug 2009 18:19]
kadir özdemir
[4 Aug 2009 18:20]
kadir özdemir
ndb_error_report
Attachment: ndb_error_report_20090804185755.tar.bz2 (application/bzip2, text), 488.12 KiB.
[10 Aug 2009 12:00]
Jonas Oreland
see http://bugs.mysql.com/bug.php?id=42962
[10 Aug 2009 12:31]
Jonas Oreland
can you upload your schema ?
[10 Aug 2009 17:37]
Jonas Oreland
found and have a fix...now only need to write a test prg
[11 Aug 2009 8:12]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/80537 2952 Jonas Oreland 2009-08-11 ndb - bug#46552 Fix so that trigger ids are always *re-allocated* on SR
[11 Aug 2009 10:59]
Jonas Oreland
pushed to 7.0.7 docs: a mixture of 1) create drop index (or table with index) 2) node/system restart could cause an crash during SR
[11 Aug 2009 11:17]
Jon Stephens
Documented bugfix in the NDB-7.0.7 changelog as follows:
Creating or dropping an index (or creating or dropping a table
having one index or more) during a node or system restart could
lead to a crash during system restart.
