ndb - bug#46552   Fix so that trigger ids are always *re-allocated* on SR